[gd_scene load_steps=21 format=2]

[ext_resource path="res://art/sprites/enemies/godfly/GODFLY_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://baddies/Humuncules.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 45.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 1.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.25, 0.6, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 0, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "anger idle"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "anger idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachine" id=29]
states/Attack/node = SubResource( 19 )
states/Attack/position = Vector2( 330, 128 )
"states/anger idle/node" = SubResource( 20 )
"states/anger idle/position" = Vector2( 149, 213 )
states/death/node = SubResource( 21 )
states/death/position = Vector2( 339, 225 )
states/idle/node = SubResource( 22 )
states/idle/position = Vector2( 144, 101 )
transitions = [ "idle", "Attack", SubResource( 23 ), "Attack", "idle", SubResource( 24 ), "idle", "anger idle", SubResource( 25 ), "anger idle", "Attack", SubResource( 26 ), "Attack", "anger idle", SubResource( 27 ), "anger idle", "death", SubResource( 28 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]
resource_local_to_scene = false

[sub_resource type="CircleShape2D" id=18]
radius = 18.0

[node name="Humuncules" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )
pos_offset = Vector2( 96, -64 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 1.5
anims/Attack = SubResource( 2 )
"anims/anger idle" = SubResource( 3 )
anims/death = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
tree_root = SubResource( 29 )
anim_player = NodePath("..")
active = true
parameters/playback = SubResource( 17 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 18 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="SpookyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ITSSPOOKYTIME" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackEnd" type="Timer" parent="."]
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 2.4
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="AttackTime"]
[connection signal="timeout" from="SpookyTimer" to="." method="SpookyTime"]
[connection signal="timeout" from="ITSSPOOKYTIME" to="." method="SpookyTimeOver"]
[connection signal="timeout" from="AttackEnd" to="." method="EndAttack"]
[connection signal="timeout" from="AttackDelay" to="." method="AttackTimeFR"]
